# groxide

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  mise.toml
.github/workflows/: ci.yml
.rloop/: .gitignore  config.toml
.rloop/tasks/: 00.md  01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  30.md  31.md  32.md  33.md  34.md  35.md  36.md  37.md  38.md  39.md  (+51 more)
docs/: IMPLEMENTATION.md  PLAN.md  REWRITE_BRIEF.md  VISION.md
docs/adr/: 0001-intentional-rewrite-history.md  0002-spec-first-progressive-plan.md  0003-defer-public-name.md  README.md
docs/plans/: 2026-03-05-cli-redesign-and-workspace-support-design.md  2026-03-05-cli-redesign-implementation.md  2026-03-05-code-review-fixes.md  2026-03-06-architecture-cleanup-design.md  2026-03-06-workspace-output-cleanup.md
docs/spec/: 01-types-and-data-model.md  02-resolution-and-query.md  03-index-and-cache.md  04-rendering.md  05-cli-and-orchestration.md
skills/groxide/: SKILL.md
src/: cache.rs  cli.rs  docgen.rs  error.rs  external.rs  index_builder.rs  lib.rs  main.rs  query.rs  reexport.rs  resolve.rs  search.rs  signature.rs  source.rs  stdlib.rs  test_utils.rs  types.rs
src/render/: ambiguous.rs  brief.rs  dispatch.rs  docs.rs  json.rs  list.rs  mod.rs  text.rs
src/snapshots/: groxide__cli__tests__help_output_matches_snapshot.snap
test-fixtures/: groxide_test_api.json
test-fixtures/groxide_test_api/: Cargo.toml
tests/: cli_errors.rs  cli_happy.rs  cross_crate.rs  stress.rs
(+95 files in other folders)
