[package]
name = "groxide"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Query Rust crate documentation from the terminal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/groxide/groxide"
homepage = "https://github.com/groxide/groxide"
keywords = ["documentation", "rustdoc", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".rloop/", ".github/", "docs/", "CLAUDE.md", "mise.toml"]

[[bin]]
name = "grox"
path = "src/main.rs"

[dependencies]
cargo_metadata = "0.19"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
flate2 = "1.0"
rmp-serde = "1.3"
rustdoc-types = "0.57"
semver = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
thiserror = "2"
ureq = { version = "2.10", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.0"
insta = { version = "1.40", features = ["filters"] }
tempfile = "3"
